[package]
name = "tcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
threadpool = "1.8.1"
# since this is a tutorial and we don't care about optimizing compile time, we want the "full" features of tokio
#tokio = { version = "1.48.0", features = ["full"]}
tokio = { version = "1", features = ["full"]} 
mini-redis = "0.4"
bytes = "1"